--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/post-outline.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/src/main.jsx" defer></script>
-    <title>The Blogdfasdfasdfasdf</title>
+    <title>The Blog</title>
   </head>
   <body>
     <div id="root"></div>
